Update all tests to clean up the index